ready to think about Signup

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,11 @@
-<h1>iNat Lite</h1>
-<p>
-  This project is an attempt to make a liter version of 
-  <a href="http://www.inaturalist.org/">iNaturalist.org</a>
-</p>
+<div class="center hero-unit">
+  <h1>iNat Lite</h1>
+  <p>
+    This project is an attempt to make a liter version of 
+    <a href="http://www.inaturalist.org/">iNaturalist.org</a>
+  </p>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
