--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -54,7 +54,7 @@ h2 {
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: $grayLight;
+  color: $grayMediumLight;
 }
 
 p {
@@ -62,7 +62,16 @@ p {
   line-height: 1.7em;
 }
 
-
+.ratio{
+    position:relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100% ; /* % of width, defines aspect ratio*/
+    
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;  
+}
 /* header */
 
 #logo {
@@ -87,11 +96,11 @@ footer {
   margin-top: 45px;
   padding-top: 5px;
   border-top: 1px solid $grayMediumLight;
-  color: $grayLight;
+  color: $grayMediumLight;
   a {
-    color: $gray;
+    color: $grayMediumLight;
     &:hover {
-      color: $grayDarker;
+      color: $grayMediumLight;
     }
   }
   small {
@@ -122,7 +131,7 @@ footer {
 aside {
   section {
     padding: 10px 0;
-    border-top: 1px solid $grayLighter;
+    border-top: 1px solid $grayMediumLight;
     &:first-child {
       border: 0;
       padding-top: 0;
@@ -168,4 +177,62 @@ input {
     list-style: none;
     margin: 0 0 18px 0;
   }
+}
+
+
+/* captions */
+.cropper {
+  position: relative;
+  float: left;
+  width: 185px;
+  height: 185px;
+  overflow: hidden;
+  margin: 10px;
+  position: relative;
+}
+
+.inner_img {
+  position:absolute;
+  left: -100%;
+  right: -100%;
+  top: -100%;
+  bottom: -100%;
+  margin: auto;
+  min-height: 100%;
+  min-width: 100%;
+}
+
+.caption {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background: url(http://placehold.it/185x185/333.png&text=+);
+	width: 100%;
+	height: 100%;
+}
+.caption h3, .caption p {
+	color: #fff;
+	margin: 20px;
+}
+.caption h3 {
+	margin: 20px 20px 10px;
+}
+.caption p {
+	font-size: .75em;
+	line-height: 1.5em;
+	margin: 0 20px 15px;
+}
+.caption a.learn-more {
+	padding: 5px 10px;
+	background: #08c;
+	color: #fff;
+	border-radius: 2px;
+	-moz-border-radius: 2px;
+	font-weight: bold;
+  text-decoration: none;
+}
+.caption a.learn-more:hover {
+  background: #fff;
+  color: #08c;
 }
