--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,3 +5,29 @@
   uses the iNat API to try to mash up a liter version of some of the
   site's functionality.
 </p>
+
+<a href="#myModal" role="button" class="btn" data-toggle="modal">Launch demo
+modal</a>
+
+<div class="modal hide fade">
+<div class="modal-header">
+<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+&times;</button>
+<h3>Modal header</h3>
+</div>
+<div class="modal-body">
+<p>One fine body…</p>
+</div>
+<div class="modal-footer">
+<a href="#" class="btn">Close</a>
+<a href="#" class="btn btn-primary">Save changes</a>
+</div>
+</div>
+
+<div class="btn danger">Uh oh</div>
+
+<script type="text/javaScript">
+$(function(){
+$('.btn.danger').button('toggle').addClass('active');
+})();
+</script>
