--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,49 @@
-<div class="center hero-unit">
-  <h1>iNat Lite</h1>
-  <p>
-    This project is an attempt to make a liter version of 
-    <a href="http://www.inaturalist.org/">iNaturalist.org</a>
-  </p>
-
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Add Observation</h4>
+      </div>
+      <div class="modal-body">
+        Add an Observation
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+<div class="row">
+  <div class="col-md-12">
+    <pre>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </pre>
+  </div>
 </div>
-
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+<div class="row">
+  <div class="col-md-3">
+    <%= profile_pic_for current_user %>
+    <div class="prof">
+      <h3><%= current_user.login %></h3>
+      <%= link_to edit_user_path(current_user), role: "button", class: "btn btn-default btn-lg" do %>
+        <span class='glyphicon glyphicon-cog'></span> Settings
+      <% end %>
+    </div>
+    <button class="btn btn-primary btn-lg add_obs" data-toggle="modal" data-target="#myModal">
+      Add Observation
+    </button>
+    <ul class="items nav nav-pills nav-stacked">
+        <li class="active"><a href="#">Item1</a></li>
+        <li><a href="#">Item2</a></li>
+        <li><a href="#">Item3</a></li>
+    </ul>
+  </div>
+  <div class="col-md-9">
+    <div class="row">
+      <%= render @observations %>
+    </div> 
+  </div>
+</div>
